[gd_scene load_steps=21 format=3 uid="uid://cg0jtdevy877f"]

[ext_resource type="Script" path="res://Tutorial/tutorial.gd" id="1_hgldx"]
[ext_resource type="PackedScene" uid="uid://bsqhqkxu74jve" path="res://Mom/mom.tscn" id="2_jm7vr"]
[ext_resource type="Texture2D" uid="uid://ds222moaccjjy" path="res://Assets/Art/Cursor.png" id="3_x3xat"]
[ext_resource type="Script" uid="uid://dp6kqo21d8sh3" path="res://Scripts/camera_2d.gd" id="4_p46jp"]
[ext_resource type="PackedScene" uid="uid://cmppofskqyqet" path="res://Backpack/BackpackController.tscn" id="6_ebtrj"]
[ext_resource type="PackedScene" uid="uid://7q65lapufcsh" path="res://Items/ItemSpawner/ItemSpawnerController.tscn" id="7_ma1tk"]
[ext_resource type="Theme" uid="uid://djb6iany7t78l" path="res://Assets/UiTheme.tres" id="8_hgldx"]
[ext_resource type="Script" path="res://Tutorial/ObjectivesList.gd" id="8_jm7vr"]
[ext_resource type="PackedScene" uid="uid://c4lk76dkkl632" path="res://Items/ItemSpawner/ItemSpawner.tscn" id="8_x1p7f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bloo"]
size = Vector2(253, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo1fs"]
size = Vector2(197, 1115.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlm2d"]
size = Vector2(203.5, 1105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3j26a"]
size = Vector2(686, 82.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7a1n"]
size = Vector2(984, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vv0ms"]
size = Vector2(1928, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxa32"]
size = Vector2(364, 62)

[sub_resource type="Animation" id="Animation_p46jp"]
resource_name = "ListDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjectivesList/Panel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(26, -500), Vector2(26, 50), Vector2(26, 25)]
}

[sub_resource type="Animation" id="Animation_x3xat"]
resource_name = "ListUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjectivesList/Panel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(26, 25), Vector2(26, 50), Vector2(26, -500)]
}

[sub_resource type="Animation" id="Animation_jm7vr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjectivesList/Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p46jp"]
_data = {
&"ListDown": SubResource("Animation_p46jp"),
&"ListUp": SubResource("Animation_x3xat"),
&"RESET": SubResource("Animation_jm7vr")
}

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_hgldx")

[node name="Mom" parent="." instance=ExtResource("2_jm7vr")]
position = Vector2(1312, 810)

[node name="ExitHouse" type="Area2D" parent="."]

[node name="Tracker" type="Sprite2D" parent="ExitHouse"]
position = Vector2(798, -68)
scale = Vector2(0.842857, 0.657143)
texture = ExtResource("3_x3xat")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitHouse"]
position = Vector2(797, -19)
shape = SubResource("RectangleShape2D_7bloo")

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("player")]
anchor_mode = 0
script = ExtResource("4_p46jp")
player = NodePath("../Mom")

[node name="Level Collision" type="StaticBody2D" parent="."]

[node name="RightWall" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(2002.5, 544.25)
shape = SubResource("RectangleShape2D_uo1fs")

[node name="LeftWall" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(-92.75, 532.5)
shape = SubResource("RectangleShape2D_rlm2d")

[node name="UpperLeft" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(326, -25.25)
shape = SubResource("RectangleShape2D_3j26a")

[node name="UpperRight" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(1417, -28)
shape = SubResource("RectangleShape2D_x7a1n")

[node name="BottomWall" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(954, 1137.5)
shape = SubResource("RectangleShape2D_vv0ms")

[node name="DoorLock" type="CollisionShape2D" parent="Level Collision"]
position = Vector2(797, -16)
shape = SubResource("RectangleShape2D_hxa32")

[node name="itemSpawnerControler" parent="." instance=ExtResource("7_ma1tk")]

[node name="ItemSpawners" type="Node2D" parent="."]

[node name="Food" parent="ItemSpawners" instance=ExtResource("8_x1p7f")]
position = Vector2(166, 937)
IdsToAccept = PackedInt32Array(1001, 1002, 1003)

[node name="Weapon" parent="ItemSpawners" instance=ExtResource("8_x1p7f")]
position = Vector2(1811, 182)
IdsToAccept = PackedInt32Array(3002, 3007, 3009)

[node name="Misc" parent="ItemSpawners" instance=ExtResource("8_x1p7f")]
position = Vector2(145, 233)
IdsToAccept = PackedInt32Array(4001, 4204, 4208)

[node name="Cloathing" parent="ItemSpawners" instance=ExtResource("8_x1p7f")]
position = Vector2(373, 934)
IdsToAccept = PackedInt32Array(2201, 2103, 2102)

[node name="BackpackController" parent="." instance=ExtResource("6_ebtrj")]

[node name="ObjectivesList" type="CanvasLayer" parent="."]
script = ExtResource("8_jm7vr")

[node name="Panel" type="Panel" parent="ObjectivesList"]
self_modulate = Color(1, 1, 1, 0.752941)
offset_left = 26.0
offset_top = 25.0
offset_right = 465.0
offset_bottom = 464.0
theme = ExtResource("8_hgldx")

[node name="VBoxContainer" type="VBoxContainer" parent="ObjectivesList/Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 426.0
offset_bottom = 428.0
theme_override_constants/separation = 34

[node name="Label" type="Label" parent="ObjectivesList/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- You can hide/show this list with H"
autowrap_mode = 2

[node name="Label2" type="Label" parent="ObjectivesList/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- Click to grab an Item and drag it to the backpack"
autowrap_mode = 2

[node name="Label3" type="Label" parent="ObjectivesList/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- You can rotate the item with R/Q"
autowrap_mode = 2

[node name="Label4" type="Label" parent="ObjectivesList/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- Remember to maximaze the space to get as many items you want"
autowrap_mode = 2

[node name="Label5" type="Label" parent="ObjectivesList/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "- Walk through the door to end the run"
autowrap_mode = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p46jp")
}

[connection signal="body_entered" from="ExitHouse" to="." method="_on_exit_house_body_entered"]
